# SimpleMeasuresDER

./: .gitignore  readme.txt
BasicRodCode/: CMakeLists.txt  inputFile.in  main.cpp  readme.txt
BasicRodCode/include/: Constraint.h  Material.h  Node.h  Rod.h  quaternion.h  read_file.h
BasicRodCode/src/: Constraint.cpp  Frame.cpp  LocalConstructor.cpp  Material.cpp  Node.cpp  Solver.cpp  quaternion.cpp  read_file.cpp
Buckling/AnalyticalEndforceDef/: MakePlot.m  NumericsAnalyticalComp.fig  NumericsAnalyticalCompUpdated.fig  Runner.m  bcfun.m  bvpfcn.m  guess.m
Buckling/AnalyticalGravDef/: MakePlot.m  NumericsAnalyticalComp.fig  NumericsAnalyticalCompUpdated.fig  Runner.m  bvpfcn.m  guess.m
Buckling/ObjectOrientedConstrained/: Ebendi.m  Element.m  ElementConstraintTemplate.m  FixedNode.m  Inextensibility.m  LocalConstructor.m  Material.m  PlotPhivsY0.m  Rod.m  RunCode.m  RunCode2.m  RunCodeEndLoad.m  RunCodeGravLoad.m  Solver.m  ddkappadphidphifun.m  ddkappadxdphifun.m  dkappadxfun.m  halfway.mat  skw.m
MobiusStrip/: CMakeLists.txt  PlotAll.m  PlotAll2.m  PlotData.m  clean.sh  inputFile.in  main.cpp
MobiusStrip/include/: Constraint.h  Element.h  EtapLimN.h  EtapLimP.h  Frame.h  Inextensibility.h  LocalConstructor.h  Material.h  Node.h  RibbonConst.h  Rod.h  Solver.h  X3Const.h  k20.h  quaternion.h  read_file.h
MobiusStrip/src/: Constraint.cpp  Element.cpp  EtapLimN.cpp  EtapLimP.cpp  Frame.cpp  Inextensibility.cpp  LocalConstructor.cpp  Material.cpp  Node.cpp  RibbonConst.cpp  Rod.cpp  Solver.cpp  X3Const.cpp  k20.cpp  quaternion.cpp  read_file.cpp
ObjectOrientedConstrained_TwistInstabilityComp/: 100_a_0.058946_b_2.3579_phivsy0.mat  100_a_0.058946_b_4.421_phivsy0.mat  100_a_0.18519_b_13.8889_phivsy0.mat  100_a_0.18519_b_7.4074_phivsy0.mat  100halfway.mat  150_a_0.088419_b_3.5368_phivsy0.mat  150halfway.mat  15_a_0.027778_b_1.1111_phivsy0.mat  15halfway.mat  20_a_0.00011789_b_0.0047157_phivsy0.mat  20_a_0.0011789_b_0.047157_phivsy0.mat  20_a_0.011789_b_0.47157_phivsy0.mat  20_a_0.011789_b_0.88419_phivsy0.mat  20_a_0.037037_b_1.4815_phivsy0.mat  20halfway.mat  250_a_0.14737_b_11.0524_phivsy0.mat  250_a_0.14737_b_5.8946_phivsy0.mat  250halfway.mat  30_a_0.055556_b_2.2222_phivsy0.mat  30halfway.mat  350_a_0.00058946_b_0.023579_phivsy0.mat  350_a_0.20631_b_8.2525_phivsy0.mat  350halfway.mat  50_a_0.0018519_b_0.074074_phivsy0.mat  50_a_0.029473_b_1.1789_phivsy0.mat  50_a_0.092593_b_3.7037_phivsy0.mat  50_a_0.092593_b_6.9444_phivsy0.mat  50halfway.mat  Constraint.m  DataThick.csv  DataThin.csv  Ebendi.m  Frame.m  FrameConstraintTemplate.m  LocalConstructor.m  Material.m  Node.m  NodeConstraint.m  NodeConstraintTemplate.m  Normalize.m  (+25 more)
ObjectOrientedConstrained_TwistInstabilityComp/datathick/: datathick.1.vtk  datathick.10.vtk  datathick.100.vtk  datathick.1000.vtk  (+9996 more)
OvercurvedRing/: Dataplotter.m  Dlist.txt  Dlistlower.txt  Dlistupper.txt  Makefile  Olist.txt  Olistlower.txt  Olistupper.txt  inputFile.in  main.cpp  run
(+1014 files in other folders)
